name:                cruncher
version:             1.0.0
synopsis:            The eval.so compilation system, rewritten in Haskell.
homepage:            http://github.com/eval-so/cruncher
license:             BSD3
license-file:        LICENSE
author:              Ricky Elrod <ricky@elrod.me>
maintainer:          Ricky Elrod <ricky@elrod.me>
copyright:           2013 - Ricky Elrod
category:            Data
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:
    Data.Cruncher.Language
    Data.Cruncher.Language.Everything
    Data.Cruncher.Result
    Data.Cruncher.Request
    Data.Cruncher.SELinux

    -- Languages
    Data.Cruncher.Language.C
    Data.Cruncher.Language.CPlusPlus
    Data.Cruncher.Language.PHP
    Data.Cruncher.Language.Ruby
    -- etc.

  ghc-options: -Wall -Werror -threaded
  hs-source-dirs: src

  -- other-modules:
  build-depends:
      base ==4.6.*
    , base64-bytestring ==1.0.*
    , bytestring ==0.10.*
    , containers ==0.5.*
    , directory ==1.2.*
    , filepath ==1.3.*
    , shelly ==1.3.*
    , temporary ==1.1.*
    , text ==0.11.*
    , time ==1.4.*
    , transformers ==0.3.*

test-suite hunit
  hs-source-dirs: tests src
  main-is: Spec.hs
  type: exitcode-stdio-1.0
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base ==4.6.*
    , base64-bytestring ==1.0.*
    , bytestring ==0.10.*
    , containers ==0.5.*
    , directory ==1.2.*
    , filepath ==1.3.*
    , hspec ==1.8.*
    , shelly ==1.3.*
    , temporary ==1.1.*
    , text ==0.11.*
    , time ==1.4.*
    , transformers ==0.3.*


test-suite hlint
  hs-source-dirs: tests
  main-is: hlint.hs
  type: exitcode-stdio-1.0
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , hlint >= 1.7
