name:                cruncher
version:             1.0.0
synopsis:            The eval.so compilation system, rewritten in Haskell.
homepage:            http://github.com/eval-so/cruncher
license:             BSD3
license-file:        LICENSE
author:              Ricky Elrod <ricky@elrod.me>
maintainer:          Ricky Elrod <ricky@elrod.me>
copyright:           2014 - Ricky Elrod
category:            Data
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:
    Evalso.Cruncher.Language.Everything
    Evalso.Cruncher.SELinux
    Evalso.Cruncher.Unsandboxed

    -- Languages
    Evalso.Cruncher.Language.Bash
    Evalso.Cruncher.Language.C
    Evalso.Cruncher.Language.ChickenScheme
    Evalso.Cruncher.Language.Clojure
    Evalso.Cruncher.Language.CoffeeScript
    Evalso.Cruncher.Language.CPlusPlus
    Evalso.Cruncher.Language.CSharp
    Evalso.Cruncher.Language.Elixir
    Evalso.Cruncher.Language.Factor
    Evalso.Cruncher.Language.FSharp
    Evalso.Cruncher.Language.Go
    Evalso.Cruncher.Language.Haskell
    Evalso.Cruncher.Language.Idris
    Evalso.Cruncher.Language.Io
    Evalso.Cruncher.Language.Java
    Evalso.Cruncher.Language.JavaScript
    Evalso.Cruncher.Language.JRuby18
    Evalso.Cruncher.Language.LOLCODE
    Evalso.Cruncher.Language.Lua
    Evalso.Cruncher.Language.Perl6
    Evalso.Cruncher.Language.Perl
    Evalso.Cruncher.Language.PHP
    Evalso.Cruncher.Language.Python2
    Evalso.Cruncher.Language.Ruby
    Evalso.Cruncher.Language.Rust
    Evalso.Cruncher.Language.Scala
    Evalso.Cruncher.Language.Smalltalk
    Evalso.Cruncher.Language.SML
    Evalso.Cruncher.Language.VBNET
    -- etc.

  ghc-options: -Wall -Werror -threaded
  hs-source-dirs: src

  -- other-modules:
  build-depends:
      base > 4 && < 5
    , base64-bytestring >= 1.0.0 && < 2
    , bytestring >= 0.10 && < 0.12
    , containers >= 0.5 && < 0.7
    , directory >= 1.2 && < 2
    , filepath >= 1.3 && < 2
    , lens >= 4 && < 5
    , shelly >= 1.3 && < 2
    , temporary >= 1.1 && < 2
    , text >= 1.1 && < 2
    , time >= 1.4 && < 2
    , transformers >= 0.3 && < 0.4
    , MissingH >= 1.2 && < 1.4
    , cruncher-types

test-suite hunit
  hs-source-dirs: tests src
  main-is: Spec.hs
  type: exitcode-stdio-1.0
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson >= 0.7 && < 1
    , base > 4 && < 5
    , base64-bytestring >= 1.0.0 && < 2
    , bytestring >= 0.10 && < 0.12
    , containers >= 0.5 && < 0.7
    , directory >= 1.2 && < 2
    , filepath >= 1.3 && < 2
    , lens >= 4 && < 5
    , shelly >= 1.3 && < 2
    , temporary >= 1.1 && < 2
    , text >= 1.1 && < 2
    , time >= 1.4 && < 2
    , transformers >= 0.3 && < 0.4
    , MissingH >= 1.2 && < 1.4
    , cruncher-types
    , hspec >= 1.8

test-suite hlint
  hs-source-dirs: tests
  main-is: hlint.hs
  type: exitcode-stdio-1.0
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , hlint >= 1.8
